<resources>

    <string name="app_name">PaperTelephone</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Paper Telephone</string>
    <string name="no_items_">No Games.</string>
    <string name="new_game">Start a Game</string>
    <string name="title_activity_game">Paper Telephone</string>
    <string name="phrase_hint">Enter a phrase.</string>
    <string name="response">Response</string>
    <string name="previous_turn_">Previous Turn:</string>
    <string name="prev_turn">Previous Turn Image</string>
    <string name="done">Done</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_completed">CompletedActivity</string>

</resources>