<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal|vertical" >

    <TextView
        android:id="@+id/prev_turn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_turn_" />

    <ImageView
        android:id="@+id/prev_drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:contentDescription="@string/prev_turn"
        android:scrollbars="horizontal|vertical"
        android:src="@drawable/ic_action_search" />

    <TextView
        android:id="@+id/next_turn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response" />

    <EditText
        android:id="@+id/next_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phrase_hint"
        android:maxLines="5"
        android:minLines="3"
        android:scrollbars="horizontal|vertical" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>
