<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:id="@+id/container"
    >

    <TextView
        android:id="@+id/prev_turn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_turn_"
        tools:context=".GameActivity" />

    <TextView
        android:id="@+id/prev_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="horizontal|vertical"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/next_turn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response" />

    <EditText
        android:id="@+id/next_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phrase_hint"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="horizontal|vertical" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>